disaster model dialog

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-index style="height: 100%;" ></app-index>
+  <app-index></app-index>
 </body>
 </html>
