--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>GraduationProject</title>
+  <title>swust校园三维地图</title>
   <base href="/">
 
   <meta name="viewport"
